<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_id"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/species"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_species"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_age"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isAlive"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_isAlive"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/childrenNumber"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_childrenNumber"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eatenNumber"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/statistic_record_field_margin"
            android:text="@string/statistics_header_eatenNumber"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>
</layout>